# autoware-agent

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.carla  README.md  autoware_bridge.Dockerfile  docker-compose.yml  frames_2026-06-27_18.36.07.gv  package.xml  test_logs.txt
.github/: autoware-ci.yaml
.github/workflows/: autoware-ci.yaml  build-agent-image.yml  docker-publish.yml
carla_scene_manager/: Dockerfile  carla_scene_manager.py  generate_grpc.py  requirements.txt  vehicle_gateway_pb2.py  vehicle_gateway_pb2_grpc.py
docker/: .env.example  Dockerfile.agent  Dockerfile.autoware-data  Dockerfile.ci  build_autoware_base.sh  docker-compose.edge.yaml  entrypoint-agent.sh  entrypoint.sh
gateway_bridge/: CMakeLists.txt  Dockerfile  package.xml
gateway_bridge/include/: bridge_metrics.hpp  data_exposer.hpp  gateway_config.hpp  sensor_service.hpp  thread_safe_queue.hpp  vehicle_service.hpp
gateway_bridge/src/: vehicle_service.cpp
proto/: CMakeLists.txt  vehicle_frame.proto  vehicle_gateway.proto
src/: AutowareApp.cpp  AutowareApp.h  Config.h.in  main.cc  zenoh_publisher.h
src/cluster_bridge/: CMakeLists.txt
src/cluster_bridge/include/: ClusterBridge.h  FrameStates.h
src/cluster_bridge/src/: ClusterBridge.cc
src/gateway_bridge/: CMakeLists.txt  package.xml  ros-entrypoint.sh
src/gateway_bridge/include/: AutowareController.h  AutowareControllerProvider.h  ClusterBridgeProvider.h  Providers.h  TripController.h  TripStates.h  TripStatus.h  TripTimings.h  VehicleGatewayClient.h  VehicleGatewayService.h  VehicleGatewayStreamClient.h  bridge_context.hpp  gateway_client.hpp  trip_service.hpp
src/gateway_bridge/src/: AutowareController.cc  TripController.cc  VehicleGatewayClient.cc  VehicleGatewayService.cc  gnss_gateway_bridge.cpp  sensor_service.cpp  trip_service.cpp
src/location_bridge/: CMakeLists.txt
src/location_bridge/include/: FrameStates.h  LocationBridge.h
src/location_bridge/src/: LocationBridge.cc
src/map_routes/: CMakeLists.txt  LaneletMap.cc  LaneletMap.h  MapProjectorInfo.cc  MapProjectorInfo.h  RouteConfig.cc  RouteConfig.h  map_config.yaml  nishishinjuku_routes.yaml
src/perception_bridge/: CMakeLists.txt
src/perception_bridge/include/: FrameStates.h  PerceptionBridge.h
src/perception_bridge/src/: PerceptionBridge.cc
src/planning_bridge/: CMakeLists.txt
src/planning_bridge/include/: FrameStates.h  PlanningBridge.h
src/planning_bridge/src/: PlanningBridge.cc
src/trip_bridge/: CMakeLists.txt
src/trip_bridge/include/: FrameStates.h  TripBridge.h
src/trip_bridge/src/: TripBridge.cc
tests/: CMakeLists.txt  test_main.cpp
tests/integration/autoware_agent/: autoware_agent_test.cc  full_trip_test.cc  gateway_tests.cc
tests/unit/: perception_bridge_zenoh_test.cc  routing_tests.cc  test_routes.yaml
