<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>vehicle_autoware_agent</name>
    <version>1.0.0</version>
    <description>GNSS to Gateway gRPC bridge for Autoware-CARLA</description>
    <maintainer email="ahmedadelwafdy782@email.com">Ahmed Wafdy</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>fastcdr</depend>

    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>autoware_vehicle_msgs</depend>
    <depend>autoware_adapi_v1_msgs</depend>
    <depend>autoware_planning_msgs</depend>
    <depend>autoware_internal_debug_msgs</depend>
    <depend>autoware_internal_msgs</depend>
    <depend>autoware_perception_msgs</depend>
    <depend>tier4_vehicle_msgs</depend>
    <depend>tier4_external_api_msgs</depend>
    <depend>libpcl-all-dev</depend>
    <depend>pcl_conversions</depend>

    <depend>yaml-cpp</depend>
    <depend>libboost-system-dev</depend>
    <depend>protobuf-dev</depend>
    <depend>grpc++</depend>
    <depend>geographiclib</depend>
    <depend>fmt</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <test_depend>ament_lint_auto</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>